@startuml

title __MODEL's Class Diagram__\n

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Comment {
          - createdDate : LocalDate
          - id : Integer
          - text : String
          + getCreatedDate()
          + getId()
          + getImage()
          + getText()
          + getUser()
          + setCreatedDate()
          + setId()
          + setImage()
          + setText()
          + setUser()
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Image {
          - comments : List<Comment>
          - date : Date
          - description : String
          - id : Integer
          - imageFile : String
          - tags : List<Tag>
          - title : String
          + Image()
          + Image()
          + Image()
          + getComments()
          + getDate()
          + getDescription()
          + getId()
          + getImageFile()
          + getTags()
          + getTitle()
          + getUser()
          + setComments()
          + setDate()
          + setDescription()
          + setId()
          + setImageFile()
          + setTags()
          + setTitle()
          + setUser()
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.Tag {
          - id : Integer
          - images : List<Image>
          - name : String
          + Tag()
          + Tag()
          + getId()
          + getImages()
          + getName()
          + setId()
          + setImages()
          + setName()
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.User {
          - comments : List<Comment>
          - id : Integer
          - images : List<Image>
          - password : String
          - username : String
          + getComments()
          + getId()
          + getImages()
          + getPassword()
          + getProfile()
          + getUsername()
          + setComments()
          + setId()
          + setImages()
          + setPassword()
          + setProfile()
          + setUsername()
      }
    }
  }
  

  namespace ImageHoster {
    namespace model {
      class ImageHoster.model.UserProfile {
          - emailAddress : String
          - fullName : String
          - id : Integer
          - mobileNumber : String
          + UserProfile()
          + getEmailAddress()
          + getFullName()
          + getId()
          + getMobileNumber()
          + setEmailAddress()
          + setFullName()
          + setId()
          + setMobileNumber()
      }
    }
  }
  

  ImageHoster.model.Comment o-- ImageHoster.model.Image : image
  ImageHoster.model.Comment o-- ImageHoster.model.User : user
  ImageHoster.model.Image o-- ImageHoster.model.User : user
  ImageHoster.model.User o-- ImageHoster.model.UserProfile : profile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
